Add general styles

--- a/index.html
+++ b/index.html
@@ -12,27 +12,33 @@
     />
   </head>
   <body>
-    <header>
-      <h1>Borys Ziukov</h1>
-      <h3>Junior Fullstack Developer</h3>
-      <address>
-        <ul>
-          <li>
-            <a href="tel:+380952746240"><span>Phone: </span>+380952746240</a>
-          </li>
-          <li>
-            <a href="mailto:ziukoff1985@gmail.com"
-              ><span>E-mail: </span>ziukoff1985@gmail.com</a
+    <header class="header">
+      <h1 class="main-title">Borys Ziukov</h1>
+      <h3 class="major">Junior Fullstack Developer</h3>
+      <address class="contacts">
+        <ul class="contacts-list">
+          <li class="contacts-list-item">
+            <a class="contacts-link" href="tel:+380952746240"
+              ><span class="contacts-link-span">Phone: </span>+380952746240</a
             >
           </li>
-          <li>
-            <a href="https://www.linkedin.com/in/borys-ziukov/"
-              ><span>LinkedIn</span>linkedin.com/in/borys-ziukov</a
+          <li class="contacts-list-item">
+            <a
+              class="contacts-link"
+              href="https://www.linkedin.com/in/borys-ziukov/"
+              ><span class="contacts-link-span">LinkedIn: </span
+              >linkedin.com/in/borys-ziukov</a
+            >
+          </li>
+          <li class="contacts-list-item">
+            <a class="contacts-link" href="mailto:ziukoff1985@gmail.com"
+              ><span class="contacts-link-span">E-mail: </span
+              >ziukoff1985@gmail.com</a
             >
           </li>
         </ul>
       </address>
-      <p>
+      <p class="description">
         I`m a motivated Junior Fullstack Developer with hands-on experience in
         building responsive, accessible, and user-friendly web applications
         using HTML5, CSS3, JavaScript, React, Node.js, Express, and MongoDB.
@@ -48,126 +54,134 @@
     </header>
     <main>
       <article>
-        <h2>Experience</h2>
-        <section>
-          <p>2023-02 - Present</p>
-          <h3>Content Manager</h3>
-          <p>Freelance</p>
-          <ul>
-            <li>Website content uploading</li>
-            <li>Generaing content according to the tasks</li>
-            <li>SEO-optimization</li>
-            <li>Website content administration on WordPress</li>
-          </ul>
-          <h4>Key Achievement</h4>
-          <p>
-            Successfully launched a website from the ground up, achieving a 150%
-            traffic growth within a year
-          </p>
+        <h2 class="article-title">Experience</h2>
+        <section class="experience-section">
+          <p class="experience-period">2023-02 - Present</p>
+          <div class="job-description">
+            <h3 class="job-title">Content Manager</h3>
+            <p class="job-place">Freelance</p>
+            <ul class="job-description-list">
+              <li>Website content uploading</li>
+              <li>Generaing content according to the tasks</li>
+              <li>SEO-optimization</li>
+              <li>Website content administration on WordPress</li>
+            </ul>
+            <h4 class="key-achievement">Key Achievement</h4>
+            <p>
+              Successfully launched a website from the ground up, achieving a
+              150% traffic growth within a year
+            </p>
+          </div>
         </section>
-        <section>
-          <p>2018-03 - 2022-08</p>
-          <h3>Key Account Manager</h3>
-          <p>E.NEXT International Electrotechnical Group | Kyiv, Ukraine</p>
-          <ul>
-            <li>Strategic Key Account Management</li>
-            <li>Distribution and Logistics Optimization for Key Customers</li>
-            <li>Sales Administration and Reporting</li>
-            <li>Sales Team Development and Training</li>
-          </ul>
-          <h4>Key Achievement</h4>
-          <p>
-            Drove significant growth in market share and profitability from key
-            clients through enhanced partnerships and streamlined operational
-            processes
-          </p>
+        <section class="experience-section">
+          <p class="experience-period">2018-03 - 2022-08</p>
+          <div class="job-description">
+            <h3 class="job-title">Key Account Manager</h3>
+            <p class="job-place">
+              E.NEXT International Electrotechnical Group | Kyiv, Ukraine
+            </p>
+            <ul class="job-description-list">
+              <li>Strategic Key Account Management</li>
+              <li>Distribution and Logistics Optimization for Key Customers</li>
+              <li>Sales Administration and Reporting</li>
+              <li>Sales Team Development and Training</li>
+            </ul>
+            <h4 class="key-achievement">Key Achievement</h4>
+            <p>
+              Drove significant growth in market share and profitability from
+              key clients through enhanced partnerships and streamlined
+              operational processes
+            </p>
+          </div>
         </section>
-        <section>
-          <p>2018-03 - 2022-08</p>
-          <h3>Key Account Manager</h3>
-          <p>IEK International Electrotechnical Group | Kyiv, Ukraine</p>
-          <ul>
-            <li>Strategic Key Account Management</li>
-            <li>Distribution and Logistics Optimization for Key Customers</li>
-            <li>Sales Administration and Reporting</li>
-            <li>Sales Team Development and Training</li>
-          </ul>
-          <h4>Key Achievement</h4>
-          <p>
-            Drove significant growth in market share and profitability from key
-            clients through enhanced partnerships and streamlined operational
-            processes
-          </p>
-        </section>
-        <section>
-          <p>2008-01 - 2017-08</p>
-          <h3>Key Account Manager</h3>
-          <p>IEK International Electrotechnical Group | Kyiv, Ukraine</p>
-          <ul>
-            <li>Strategic Client Relationship Management</li>
-            <li>Supply Chain and Logistics Coordination</li>
-            <li>Performance Analysis & Reporting</li>
-            <li>Market Insights & Competitive Analysis</li>
-          </ul>
-          <h4>Key Achievement</h4>
-          <p>
-            Achieved a 25% year-over-year revenue growth across a portfolio of
-            top-tier accounts by implementing tailored strategic account plans
-            and streamlining order-to-delivery cycles
-          </p>
+        <section class="experience-section">
+          <p class="experience-period">2008-01 - 2017-08</p>
+          <div class="job-description">
+            <h3 class="job-title">Key Account Manager</h3>
+            <p class="job-place">
+              IEK International Electrotechnical Group | Kyiv, Ukraine
+            </p>
+            <ul class="job-description-list">
+              <li>Strategic Client Relationship Management</li>
+              <li>Supply Chain and Logistics Coordination</li>
+              <li>Performance Analysis & Reporting</li>
+              <li>Market Insights & Competitive Analysis</li>
+            </ul>
+            <h4 class="key-achievement">Key Achievement</h4>
+            <p>
+              Achieved a 25% year-over-year revenue growth across a portfolio of
+              top-tier accounts by implementing tailored strategic account plans
+              and streamlining order-to-delivery cycles
+            </p>
+          </div>
         </section>
       </article>
       <article>
-        <h2>Education</h2>
-        <section>
-          <p>2025 - Present</p>
-          <h3>FreshCode Training Center</h3>
-          <p>Fullstack Developer</p>
+        <h2 class="article-title">Education</h2>
+        <section class="experience-section">
+          <p class="experience-period">2025 - Present</p>
+          <div class="job-description">
+            <h3 class="job-title">FreshCode Training Center</h3>
+            <p class="education-major">Fullstack Developer</p>
+          </div>
         </section>
-        <section>
-          <p>2024 - 2025</p>
-          <h3>GoIT Academy</h3>
-          <p>Fullstack Developer</p>
+        <section class="experience-section">
+          <p class="experience-period">2024 - 2025</p>
+          <div class="job-description">
+            <h3 class="job-title">GoIT Academy</h3>
+            <p class="education-major">Fullstack Developer</p>
+          </div>
         </section>
-        <section>
-          <p>2023 - 2024</p>
-          <h3>Internet Marketing Academy WebPromoExperts</h3>
-          <p>SEO-specialist</p>
+        <section class="experience-section">
+          <p class="experience-period">2023 - 2024</p>
+          <div class="job-description">
+            <h3 class="job-title">
+              Internet Marketing Academy WebPromoExperts
+            </h3>
+            <p class="education-major">SEO-specialist</p>
+          </div>
         </section>
-        <section>
-          <p>2001 - 2006</p>
-          <h3>Poltava State Agrarian University</h3>
-          <p>Mechanical engineer in agriculture | Master's Degree</p>
+        <section class="experience-section">
+          <p class="experience-period">2001 - 2006</p>
+          <div class="job-description">
+            <h3 class="job-title">Poltava State Agrarian University</h3>
+            <p class="education-major">
+              Mechanical engineer in agriculture | Master's Degree
+            </p>
+          </div>
         </section>
       </article>
       <article>
-        <h2>Skills</h2>
-        <section>
-          <h3>Frontend</h3>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript (ES6+)</li>
-            <li>React (Hooks, Redux, Router)</li>
-          </ul>
-        </section>
-        <section>
-          <h3>Backend</h3>
-          <ul>
-            <li>Node.js</li>
-            <li>Express</li>
-            <li>MongoDB</li>
-            <li>REST API</li>
-          </ul>
-        </section>
-        <section>
-          <h3>SEO</h3>
-          <ul>
-            <li>Content optimization</li>
-            <li>Technical audits</li>
-            <li>Google Search Console, Ahrefs, Screaming Frog</li>
-          </ul>
-        </section>
+        <h2 class="article-title">Skills</h2>
+        <div class="skills-list">
+          <section class="skills-list-item">
+            <h3 class="skills-title">Frontend</h3>
+            <ul class="skills-tech">
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>JavaScript (ES6+)</li>
+              <li>React</li>
+            </ul>
+          </section>
+          <section class="skills-list-item">
+            <h3 class="skills-title">Backend</h3>
+            <ul class="skills-tech">
+              <li>Node.js</li>
+              <li>Express</li>
+              <li>MongoDB</li>
+              <li>REST API</li>
+            </ul>
+          </section>
+          <section class="skills-list-item">
+            <h3 class="skills-title">SEO</h3>
+            <ul class="skills-tech">
+              <li>Tech SEO</li>
+              <li>Linkbuilding</li>
+              <li>On-page SEO</li>
+              <li>Keyword Research</li>
+            </ul>
+          </section>
+        </div>
       </article>
     </main>
   </body>
