Fix styles - finally

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume - CV</title>
+    <title>Resume - My CV</title>
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="shortcut icon"
@@ -18,7 +18,7 @@
       <address class="contacts">
         <ul class="contacts-list">
           <li class="contacts-list-item">
-            <a class="contacts-link" href="tel:+380952746240"
+            <a class="contacts-link" href="tel:+380952746240" target="_blank"
               ><span class="contacts-link-span">Phone: </span>+380952746240</a
             >
           </li>
@@ -26,12 +26,16 @@
             <a
               class="contacts-link"
               href="https://www.linkedin.com/in/borys-ziukov/"
+              target="_blank"
               ><span class="contacts-link-span">LinkedIn: </span
               >linkedin.com/in/borys-ziukov</a
             >
           </li>
           <li class="contacts-list-item">
-            <a class="contacts-link" href="mailto:ziukoff1985@gmail.com"
+            <a
+              class="contacts-link"
+              href="mailto:ziukoff1985@gmail.com"
+              target="_blank"
               ><span class="contacts-link-span">E-mail: </span
               >ziukoff1985@gmail.com</a
             >
@@ -56,13 +60,13 @@
       <article>
         <h2 class="article-title">Experience</h2>
         <section class="experience-section">
-          <p class="experience-period">2023-02 - Present</p>
+          <p class="experience-period">2023-02 - present</p>
           <div class="job-description">
             <h3 class="job-title">Content Manager</h3>
             <p class="job-place">Freelance</p>
             <ul class="job-description-list">
               <li>Website content uploading</li>
-              <li>Generaing content according to the tasks</li>
+              <li>Generating content according to the tasks</li>
               <li>SEO-optimization</li>
               <li>Website content administration on WordPress</li>
             </ul>
@@ -119,7 +123,7 @@
       <article>
         <h2 class="article-title">Education</h2>
         <section class="experience-section">
-          <p class="experience-period">2025 - Present</p>
+          <p class="experience-period">2025 - present</p>
           <div class="job-description">
             <h3 class="job-title">FreshCode Training Center</h3>
             <p class="education-major">Fullstack Developer</p>
